update 2nd ipynb

--- a/2. Define the Network Architecture.ipynb
+++ b/2. Define the Network Architecture.ipynb
@@ -1493,11 +1493,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: I chose Smooth L1 Loss as loss function, and Adam as optimizer.\n",
+    "**Answer**: \n",
+    "\n",
+    "I chose Smooth L1 Loss as loss function, and Adam as optimizer.\n",
     "The reason why I chose loss function is that Smooth L1 Loss is not sensitive to outliers than MSE loss function. \n",
     "Facial keypoints are densely pointed on face in each picture. So that, I assume that outliers appears frequently. Smooth L1 loss is the most expecting loss function among L1 Loss, MSE, and Smooth L1 Loss.\n",
     "\n",
-    "Adam is commonly used in deep neural network recently. Adam is a kind of optimizer which is combination of AdaGrad and Momentum. There are many research which adopts Adam as optimizer, and this optimizer is often evaluated positively. That's why I chose this algorigh"
+    "Adam is commonly used in deep neural network recently. Adam is a kind of optimizer which is combination of AdaGrad and Momentum. There are many research which adopts Adam as optimizer, and this optimizer is often evaluated positively. That's why I chose this optmizer."
    ]
   },
   {
@@ -1511,7 +1513,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: write your answer here"
+    "**Answer**: \n",
+    "\n",
+    "I started"
    ]
   },
   {
