complete to write report.

--- a/2. Define the Network Architecture.ipynb
+++ b/2. Define the Network Architecture.ipynb
@@ -1376,7 +1376,9 @@
     "**Answer**: \n",
     "\n",
     "I started very simple model: 2 convolution layer and 1 dense (fully-connected) layer without batch normalization and dropout. This model suffers from much under-fitting.\n",
-    "I adopted VGG-16 after confirming that simple model can predict the facial keypoint accurately. I adopted VGG-16 because it is very simple and easy to extend layers. My model has 14 convolution layers with which Batch Normalization layers are connected layer by layer. Besides, fully-connected layers are following convolution layers. "
+    "I adopted VGG-16 after confirming that simple model can predict the facial keypoint accurately. I adopted VGG-16 because it is very simple and easy to extend layers. My model has 14 convolution layers with which Batch Normalization layers are connected layer by layer. Besides, dense layers are following convolution layers. There are 2 hidden dense layers, each of which is followed by dropout, and 1 output dense layer.\n",
+    "\n",
+    "I aims to avoid overfitting with using batch normalization and dropout. According to best practice shown in the lecture, I applied batch normalization to convolution layers and dropout to dense layers."
    ]
   },
   {
@@ -1390,7 +1392,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: write your answer here"
+    "**Answer**: \n",
+    "\n",
+    "I tried to find the number of epochs and batch_size with tial and error approach. I prepare candidate value; 10, 15, and 20 for the number of epochs, and 16, 32, and 48 for `batch_size`. \n",
+    "\n",
+    "I paid attention to computational cost for iteration by epoch. If I execute more number of epochs, I assumed, there might be more redundant computation for training. However, less number of epochs prevent my model from being trained accurately. Finally, I set 15 as the number of epochs according to prediction result with test dataset.\n",
+    "\n",
+    "Additionally, `batch_size` should be considered carefully. More `batch_size` should require more memory consumption, but might improve the speed of training. Less `batch_size` should costs lots of computation, but might give us better result. As a result I chose 48 as `batch_size` because the prediction result showed that the best `batch_size` was 48. I think that less `batch_size` possibly cause over-fitting, but more `batch_size` cause under-fitting. 48 for `batch_size` was appropriate value which did not cause both over-fitting and under-fitting."
    ]
   },
   {
@@ -1558,7 +1566,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: (does it detect vertical lines or does it blur out noise, etc.) write your answer here"
+    "**Answer**: \n",
+    "I picked up 5 pictures; the first is original image, the others are filtered images.\n",
+    "\n",
+    "First, we can notice that the first filtered image (second image of all) showed that edge detection was performed by first convolution layer. It detects both vertical and horizontal lines, but horizontal lines are more clear than vertical.\n",
+    "\n",
+    "The second filtered image is very similar to the third filtered image. It might extract brightness of image. Darker pixels indicate how bright original pixels are. \n",
+    "\n",
+    "The fourth filtered image is very similar to the original image. The filtered image seems blur, so that noise was removed in the last image. This image was input to next layer, and second layer can absorb the image similar to original image. "
    ]
   },
   {
