complete to write report.

--- a/2. Define the Network Architecture.ipynb
+++ b/2. Define the Network Architecture.ipynb
@@ -1571,7 +1571,7 @@
     "\n",
     "First, we can notice that the first filtered image (second image of all) showed that edge detection was performed by first convolution layer. It detects both vertical and horizontal lines, but horizontal lines are more clear than vertical.\n",
     "\n",
-    "The second filtered image is very similar to the third filtered image. It might extract brightness of image. Darker pixels indicate how bright original pixels are. \n",
+    "The second filtered image is very similar to the third filtered image. It might extract brightness of the original image. Darker pixels seems to indicate how bright original pixels are. \n",
     "\n",
     "The fourth filtered image is very similar to the original image. The filtered image seems blur, so that noise was removed in the last image. This image was input to next layer, and second layer can absorb the image similar to original image. "
    ]
