--- a/2. Define the Network Architecture.ipynb
+++ b/2. Define the Network Architecture.ipynb
@@ -93,9 +93,9 @@
    "source": [
     "# load the data if you need to; if you have already loaded the data, you may comment this cell out\n",
     "# -- DO NOT CHANGE THIS CELL -- #\n",
-    "# !mkdir ./data\n",
-    "# !wget -P ./data/ https://s3.amazonaws.com/video.udacity-data.com/topher/2018/May/5aea1b91_train-test-data/train-test-data.zip\n",
-    "# !unzip -n ./data/train-test-data.zip -d ./data"
+    "!mkdir /data\n",
+    "!wget -P /data/ https://s3.amazonaws.com/video.udacity-data.com/topher/2018/May/5aea1b91_train-test-data/train-test-data.zip\n",
+    "!unzip -n /data/train-test-data.zip -d /data"
    ]
   },
   {
@@ -123,11 +123,11 @@
     "import numpy as np\n",
     "\n",
     "# import utilities to keep workspaces alive during model training\n",
-    "# from workspace_utils import active_session\n",
+    "from workspace_utils import active_session\n",
     "\n",
     "# watch for any changes in model.py, if it changes, re-load it automatically\n",
-    "# %load_ext autoreload\n",
-    "# %autoreload 2"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -1198,8 +1198,8 @@
     "\n",
     "# this is a Workspaces-specific context manager to keep the connection\n",
     "# alive while training your model, not part of pytorch\n",
-    "# with active_session():\n",
-    "train_net(n_epochs)"
+    "with active_session():\n",
+    "    train_net(n_epochs)"
    ]
   },
   {
@@ -1332,7 +1332,7 @@
     "model_name = 'keypoints_model_1.pt'\n",
     "\n",
     "# after training, save your model parameters in the dir 'saved_models'\n",
-    "torch.save(net.state_dict(), model_dir+model_name)"
+    "# torch.save(net.state_dict(), model_dir+model_name)"
    ]
   },
   {
